@@ -6,6 +6,8 @@
 #include "ace/Log_Record.h"
 #include "ace/Get_Opt.h"
 
+#include <iostream>
+
 namespace DAnCE
 {
   NDDS_Log_Backend::NDDS_Log_Backend (void)
@@ -26,6 +28,7 @@ namespace DAnCE
   int
   NDDS_Log_Backend::init (int argc, ACE_TCHAR **argv)
   {
+    std::cerr << "init\n";
     ACE_Get_Opt opts (argc, argv, ACE_TEXT ("t:d:"), 1, 0,
                       ACE_Get_Opt::RETURN_IN_ORDER);
     opts.long_option (ACE_TEXT ("topic"), 't', ACE_Get_Opt::ARG_REQUIRED);
@@ -51,8 +54,8 @@ namespace DAnCE
             return -1;
           }
 
-        return 0;
       }
+    return 0;
   }
 
   int
@@ -88,6 +91,8 @@ namespace DAnCE
   int
   NDDS_Log_Backend::configure_dds (void)
   {
+    std::cerr << "configuring dds\n";
+
     this->participant_ = DDSDomainParticipantFactory::get_instance ()->
       create_participant (this->domain_,
                           DDS_PARTICIPANT_QOS_DEFAULT,
@@ -101,7 +106,8 @@ namespace DAnCE
       }
 
     DDS_ReturnCode_t retval;
-
+    
+    std::cerr << "participant\n";
     retval = Log_RecordTypeSupport::register_type (this->participant_,
                                                    Log_RecordTypeSupport::get_type_name ());
 
@@ -111,6 +117,7 @@ namespace DAnCE
         (void) this->close ();
         return -1;
       }
+    std::cerr << "type\n";
 
     this->topic_ = this->participant_->create_topic (this->topic_name_.c_str (),
                                                      Log_RecordTypeSupport::get_type_name (),
@@ -125,6 +132,8 @@ namespace DAnCE
         return -1;
       }
 
+    std::cerr << "topic\n";
+
     this->publisher_ = this->participant_->create_publisher (DDS_PUBLISHER_QOS_DEFAULT,
                                                              0,
                                                              DDS_STATUS_MASK_NONE);
@@ -135,6 +144,7 @@ namespace DAnCE
         this->close ();
         return -1;
       }
+    std::cerr << "publisher\n";
 
     this->datawriter_ = this->publisher_->create_datawriter (this->topic_,
                                                              DDS_DATAWRITER_QOS_DEFAULT,
@@ -147,6 +157,7 @@ namespace DAnCE
         return -1;
       }
 
+    std::cerr << "datawriter\n";
     log_record_writer_ = Log_RecordDataWriter::narrow (this->datawriter_);
 
     return 0;
@@ -160,12 +171,15 @@ namespace DAnCE
         ACE_ERROR ((LM_ERROR, ACE_TEXT ("NDDS_Log_Backend::open - unable to get configuration\n")));
         return -1;
       }
+    std::cerr << "got configuration\n";
 
     if (this->configure_dds () != 0)
       {
         ACE_ERROR ((LM_ERROR, ACE_TEXT ("NDDS_Log_Backend::open - unable to configure DDS entities\n")));
         return -1;
       }
+
+    std::cerr << "configured dds\n";
 
     return 0;
   }
@@ -179,6 +193,7 @@ namespace DAnCE
   int
   NDDS_Log_Backend::close (void)
   {
+    std::cerr << "closing\n";
     if (this->participant_ != 0)
       {
         DDS_ReturnCode_t retval =
@@ -209,6 +224,7 @@ namespace DAnCE
   ssize_t
   NDDS_Log_Backend::log (ACE_Log_Record  &log_record)
   {
+    std::cerr << "logging\n";
     Log_Record *instance (0);
 
     instance = Log_RecordTypeSupport::create_data_ex (DDS_BOOLEAN_FALSE);
